# TGNLP

./: .gitignore  LICENSE  README.md  graph_generation.py  pyproject.toml
TGNLP/: __init__.py
